Refactor ParameterTypeConverterFactory large method to a better design, correct indentation, add .gitignore